force-app/main/default/objects/cuda_signnow__SNInvitee__c/cuda_signnow__SNInvitee__c.object-meta.xml
<CustomObject>
    <description>A maintained list of users who have been invited to sign documents.</description>
    <label>SNInvitee</label>
    <nameField>
        <label>Invitee Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SNInvitees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>