force-app/main/default/objects/cuda_signnow__SNInvitee__c/fields/cuda_signnow__invite_status__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__invite_status__c</fullName>
    <label>invite_status</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>