force-app/main/default/objects/cuda_signnow__SNInvitee__c/fields/cuda_signnow__last_modified__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__last_modified__c</fullName>
    <label>last_modified</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>