force-app/main/default/objects/cuda_signnow__SNInvitee__c/fields/cuda_signnow__signnow_document_id__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__signnow_document_id__c</fullName>
    <label>signnow_document_id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>